--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -3,11 +3,8 @@
 <script>
  $(document).bind(paella.events.loadComplete,function(event,params) {
      {% if autostart %}
-     // paella.events.trigger(paella.events.play);
+     paella.events.trigger(paella.events.play);
      {% endif %}
  });
- setTimeout(function(){
-
- }, 4000);
  loadPaella('playerContainer', '{{multimediaObject.id}}');
 </script>
