#8875 PaellaPlayerBundle: Added 'timeout' to the autoplay event.
Paellaplayer loads the breaks before playing, but it doesn't load the trimming. This causes it not to show the trimming if an event 'play' is triggered too soon.

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -3,7 +3,9 @@
 <script>
  $(document).bind(paella.events.loadComplete,function(event,params) {
      {% if autostart %}
-     paella.events.trigger(paella.events.play);
+     setTimeout(function(){
+         paella.events.trigger(paella.events.play);
+     }, 2000);
      {% endif %}
  });
  loadPaella('playerContainer', '{{multimediaObject.id}}');
