--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -1,5 +1,16 @@
-<div id="playerContainer" style="display:block;width:100%" >
+<div id="playerContainer" style="display:block;width:100;" >
 </div>
+<style>
+ #playerContainer_videoContainer_container {
+   background: black;
+ }
+ #playerContainer_videoContainer_bkg {
+   display: none;
+ }
+ #paella_logo\.png {
+   display: none !important;
+ }
+</style>
 <script>
  $(document).bind(paella.events.loadComplete,function(event,params) {
      {% if autostart %}
