--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -21,6 +21,10 @@
      {% endif %}
      {% if multimediaObject.getProperty('opencastinvert') %}
      setTimeout(function(){
+         paella.events.trigger(paella.events.setProfile, {profileName: "slide_professor"});
+     }, 300);
+     {% else %}
+     setTimeout(function(){
          paella.events.trigger(paella.events.setProfile, {profileName: "professor_slide"});
      }, 300);
      {% endif %}
