--- a/Resources/public/paella/style_light.less
+++ b/Resources/public/paella/style_light.less
@@ -1561,6 +1561,16 @@ div {
 	height: 100%;
 	width: 100%;
 }
+
+.playerContainer_controls_playback_playbackBar_canvas{
+  	overflow: hidden;
+  	position: absolute;
+}
+
+.login-link {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
 /*** File: resources/style/editor.less ***/
 /* TODO: Extract this CSS to editor plugins */
 .editorTrackItem.mainTrackTrim {
