--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -1,4 +1,4 @@
-<div id="playerContainer" style="display:block;width:100;" >
+<div id="playerContainer" style="display:block;width:100%;" >
 </div>
 <style>
  #playerContainer_videoContainer {
@@ -16,19 +16,18 @@
  $(document).bind(paella.events.loadComplete,function(event,params) {
      {% if autostart %}
      setTimeout(function(){
-         paella.events.trigger(paella.events.play);
+         paella.player.play();
      }, 300);
      {% endif %}
      {% if multimediaObject.getProperty('opencastinvert') %}
      setTimeout(function(){
-         paella.events.trigger(paella.events.setProfile, {profileName: "slide_professor"});
+         paella.player.setProfile("slide_professor");
      }, 300);
      {% else %}
      setTimeout(function(){
-         paella.events.trigger(paella.events.setProfile, {profileName: "professor_slide"});
+         paella.player.setProfile("professor_slide");
      }, 300);
      {% endif %}
-
  });
  loadPaella('playerContainer', '{{multimediaObject.id}}');
 </script>
