--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -1,33 +1,36 @@
-<div id="playerContainer" style="display:block;width:100%;" >
-</div>
-<style>
- #playerContainer_videoContainer {
-   background-color: #222;
-   background-image: linear-gradient(to bottom, #333333, #111111);
- }
- #playerContainer_videoContainer_bkg {
-   display: none;
- }
- #paella_logo\.png {
-   display: none !important;
- }
-</style>
-<script>
- $(document).bind(paella.events.loadComplete,function(event,params) {
-     {% if autostart is defined and autostart == 'true' %}
-     setTimeout(function(){
-         paella.player.play();
-     }, 300);
-     {% endif %}
-     {% if multimediaObject.getProperty('opencastinvert') %}
-     setTimeout(function(){
-         paella.player.setProfile("slide_professor");
-     }, 300);
-     {% else %}
-     setTimeout(function(){
-         paella.player.setProfile("professor_slide");
-     }, 300);
-     {% endif %}
- });
- loadPaella('playerContainer', '{{multimediaObject.id}}');
-</script>
+{% extends 'PumukitPaellaPlayerBundle:PaellaPlayer:index.html.twig' %}
+{% block body_base %}
+  <div id="playerContainer" style="display:block;width:100%;" >
+  </div>
+  <style>
+   #playerContainer_videoContainer {
+     background-color: #222;
+     background-image: linear-gradient(to bottom, #333333, #111111);
+   }
+   #playerContainer_videoContainer_bkg {
+     display: none;
+   }
+   #paella_logo\.png {
+     display: none !important;
+   }
+  </style>
+  <script>
+   $(document).bind(paella.events.loadComplete,function(event,params) {
+       {% if autostart is defined and autostart == 'true' %}
+       setTimeout(function(){
+           paella.player.play();
+       }, 300);
+       {% endif %}
+       {% if multimediaObject.getProperty('opencastinvert') %}
+       setTimeout(function(){
+           paella.player.setProfile("slide_professor");
+       }, 300);
+       {% else %}
+       setTimeout(function(){
+           paella.player.setProfile("professor_slide");
+       }, 300);
+       {% endif %}
+   });
+   loadPaella('playerContainer', '{{multimediaObject.id}}');
+  </script>
+{% endblock %}
