--- a/Resources/views/PaellaPlayer/404exception.html.twig
+++ b/Resources/views/PaellaPlayer/404exception.html.twig
@@ -1,10 +1,14 @@
-<style>
-body {
-  background: black;
-  color: white;
-  font-weight: bold;
-}
-</style>
-<div style="text-align: center;position: absolute;width:100%;top:50%;">
-{{ message | trans }}
-</div>
+<html>
+  <body>
+    <style>
+     body {
+       background: black;
+       color: white;
+       font-weight: bold;
+     }
+    </style>
+    <div style="text-align: center;position: absolute;width:100%;top:50%;">
+      {{ message | trans }}
+    </div>
+  </body>
+</html>
