Added style to head.

--- a/Resources/views/PaellaPlayer/404exception.html.twig
+++ b/Resources/views/PaellaPlayer/404exception.html.twig
@@ -1,5 +1,5 @@
 <html>
-  <body>
+  <head>
     <style>
      body {
        background: black;
@@ -7,6 +7,8 @@
        font-weight: bold;
      }
     </style>
+  </head>
+  <body>
     <div style="text-align: center;position: absolute;width:100%;top:50%;">
       {{ message | trans }}
     </div>
