Add new dependency traceur-compiler.js

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -10,6 +10,7 @@
 {% block javascripts %}
    <script type="text/javascript" src="javascript/swfobject.js"></script>
    <script type="text/javascript" src="javascript/base.js"></script>
+   <script type="text/javascript" src="javascript/traceur-compiler.js"></script>
    <script type="text/javascript" src="javascript/jquery.js"></script>
    <script type="text/javascript" src="javascript/lunr.min.js"></script>
    <script type="text/javascript" src="javascript/require.js"></script>
