Update paella to paella 5.1

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -2,6 +2,7 @@
 {% set hide_slidebar = true %}
 
 {% block meta %}
+  <meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
   {# THIS IS WHAT MAKES PAELLA WORK #}
   <base href="/bundles/pumukitpaellaplayer/paella/player/">
   {{ parent() }}
