--- a/Resources/public/paella/player/resources/style/style_dark_small_old.css
+++ b/Resources/public/paella/player/resources/style/style_dark_small_old.css
@@ -307,6 +307,7 @@ div {
   position: fixed;
   background-color: rgba(42, 42, 42, 0.78);
   z-index: 99;
+  min-width: 256px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -338,6 +339,16 @@ div {
 .login-link {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+video::-internal-media-controls-download-button {
+  display: none;
+}
+video::-webkit-media-controls-enclosure {
+  overflow: hidden;
+}
+video::-webkit-media-controls-panel {
+  width: calc(108%);
+  /* Adjust as needed */
 }
 /* TODO: Extract this CSS to editor plugins */
 .editorTrackItem.mainTrackTrim {
@@ -572,6 +583,14 @@ a.btn {
   font-style: italic;
   font-weight: bold;
   padding-left: 15px;
+}
+.buttonPlugin.arrowSlideNavidator.nextButton {
+  background-position: -1500% -100%;
+  pointer-events: all !important;
+}
+.buttonPlugin.arrowSlideNavidator.prevButton {
+  background-position: -1600% -100%;
+  pointer-events: all !important;
 }
 .textAnnotation {
   background-color: rgba(128, 128, 128, 0.7);
@@ -809,30 +828,6 @@ textarea {
   display: inline-block;
   margin-left: 3px;
 }
-.editorPluginToolStatusHelp,
-.editorPluginConsolidateHelp {
-  position: absolute;
-  height: 113px;
-  left: 10px;
-  right: 10px;
-  bottom: 10px;
-  overflow: auto;
-}
-.editorPluginToolStatus_trackItemList,
-.editorPluginConsolidate_trackItemList {
-  position: absolute;
-  overflow: auto;
-  bottom: 123px;
-  top: 65px;
-  left: 10px;
-  right: 10px;
-  box-shadow: inset 0px 0px 10px 2px rgba(0, 0, 0, 0.39);
-  border-radius: 7px;
-  padding-left: 13px;
-}
-.trackEditorFieldSelected {
-  background-color: red;
-}
 .buttonPlugin.extendedTabAdapterPlugin {
   background-position: -500% -200%;
 }
@@ -904,7 +899,7 @@ textarea {
   display: none;
 }
 .buttonPlugin.footPrints {
-  background-position: -280px 0px;
+  background-position: -700% 0%;
 }
 .footPrintsContainer {
   height: 20px;
@@ -917,6 +912,30 @@ textarea {
   height: 100%;
   overflow: hidden;
   display: inline-block;
+}
+.editorPluginToolStatusHelp,
+.editorPluginConsolidateHelp {
+  position: absolute;
+  height: 113px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  overflow: auto;
+}
+.editorPluginToolStatus_trackItemList,
+.editorPluginConsolidate_trackItemList {
+  position: absolute;
+  overflow: auto;
+  bottom: 123px;
+  top: 65px;
+  left: 10px;
+  right: 10px;
+  box-shadow: inset 0px 0px 10px 2px rgba(0, 0, 0, 0.39);
+  border-radius: 7px;
+  padding-left: 13px;
+}
+.trackEditorFieldSelected {
+  background-color: red;
 }
 .buttonPlugin.frameControl {
   background-position: -1200% -100%;
@@ -988,6 +1007,16 @@ textarea {
 }
 .frameControlImage {
   width: 100%;
+}
+.frameCaption {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  text-align: center;
+  padding: 5px;
+  color: black;
+  text-shadow: 1px 1px 2px #ffffff;
 }
 .showFramesButton {
   position: absolute;
@@ -1223,6 +1252,9 @@ textarea {
   text-align: center;
   margin-right: 5px;
 }
+.TimePicContainer img {
+  width: 100%;
+}
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -1324,27 +1356,6 @@ svg rect {
 .btn {
   margin-left: 20px;
 }
-.buttonPlugin.themeChooserPlugin {
-  background-position: -800% -100%;
-}
-.buttonPluginPopUp.themeChooserPlugin {
-  background-image: none;
-  min-width: 40px;
-  width: 120px;
-  text-align: right;
-}
-.buttonPluginPopUp.themeChooserPlugin .themebutton {
-  cursor: pointer;
-  text-align: left;
-  text-transform: capitalize;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-.buttonPluginPopUp.themeChooserPlugin .themebutton:hover {
-  background-color: #faa166;
-}
 .translecturesCaptionsMessageBox {
   margin-left: auto;
   margin-right: auto;
@@ -1374,6 +1385,27 @@ svg rect {
 	position:absolute;
 	left: 0px;
 */
+}
+.buttonPlugin.themeChooserPlugin {
+  background-position: -800% -100%;
+}
+.buttonPluginPopUp.themeChooserPlugin {
+  background-image: none;
+  min-width: 40px;
+  width: 120px;
+  text-align: right;
+}
+.buttonPluginPopUp.themeChooserPlugin .themebutton {
+  cursor: pointer;
+  text-align: left;
+  text-transform: capitalize;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+.buttonPluginPopUp.themeChooserPlugin .themebutton:hover {
+  background-color: #faa166;
 }
 .buttonPluginPopUp.showViewModeButton {
   background-image: none;
