--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -25,6 +25,13 @@
 
   <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/bootstrap/css/bootstrap.slate.min.css') }}" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/style/style_dark.css') }}" id="paellaSkin" type="text/css" media="screen" title="no title" charset="utf-8">
+  <style>
+   {# Added while waiting for paella upstream #}
+   video {
+       background: black;
+       box-shadow: 0px 0px 6px #000;
+   }
+  </style>
 {% endblock %}
 
 {% block title %}{{ parent() }} - {{ object.title }}{% endblock %}
