TTK-13965 twig: Syntax fix and minor refactoring

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -23,7 +23,7 @@
        {% endif %}
 
        setTimeout(function(){
-           paella.player.setProfile("{{ getPaellaLayout(app.request, multimediaObject) }}");
+           paella.player.setProfile("{{ getPaellaLayout(multimediaObject, app.request) }}");
        }, 300);
 
    });
