--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -27,6 +27,11 @@
     <script>
 
         localStorage.opencast_host = "{{ opencast_host }}";
+        var isOpencast = "{{ multimediaObject.getProperty('opencast') }}";
+        if(isOpencast) {
+            localStorage.opencastId = "{{ multimediaObject.getProperty('opencast') }}"
+        }
+
         $(document).bind(paella.events.loadComplete, function (event, params) {
             {% if autostart is defined and autostart == 'true' %}
             if (!base.userAgent.browser.IsMobileVersion) {
@@ -42,7 +47,7 @@
 
         });
         loadPaella('playerContainer', '{{ multimediaObject.id }}');
-
+        
         function setPaellaProfile(profileName) {
             $('.viewModeItemButton').removeClass('selected');
             $('.viewModeItemButton.' + profileName).addClass('selected');
